--- a/Italian/device/cancro/MiuiCamera.apk/res/values-it/strings.xml
+++ b/Italian/device/cancro/MiuiCamera.apk/res/values-it/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<string name="simple_mode_button_text_slow_video"><?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="camera_error_title">Errore Fotocamera</string>
     <string name="cannot_connect_camera_once">Impossibile avviare fotocamera</string>
@@ -480,6 +480,7 @@ ed esci dall'inquadratura"</string>
     <string name="simple_mode_button_text_panorama">Esci dalla modalità panorama</string>
     <string name="simple_mode_button_text_color_effect">Chiudi filtro</string>
     <string name="simple_mode_button_text_audio_capture">Esci dalla modalità scatto vocale</string>
+	<string name="simple_mode_button_text_slow_video">Esci dalla modalità slow-motion</string>
     <string name="simple_mode_button_text_fast_video">Esci dalla modalità fast-motion</string>
     <string name="simple_mode_title">Modalità semplice</string>
     <string name="pref_settings_mode">Modalità fotocamera</string>
