Fix error miuicamera.apk

--- a/Italian/device/cancro/MiuiCamera.apk/res/values-it/strings.xml
+++ b/Italian/device/cancro/MiuiCamera.apk/res/values-it/strings.xml
@@ -1,4 +1,4 @@
-<string name="simple_mode_button_text_slow_video"><?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="camera_error_title">Errore Fotocamera</string>
     <string name="cannot_connect_camera_once">Impossibile avviare fotocamera</string>
