--- a/Italian/main/CloudService.apk/res/values-it/strings.xml
+++ b/Italian/main/CloudService.apk/res/values-it/strings.xml
@@ -89,7 +89,7 @@ Se cambia carta SIM, deve essere inviato un nuovo SMS di attivazione."</string>
     <string name="micloud_warn_low_title">Spazio quasi esaurito…</string>
     <string name="micloud_warn_low_sum">Il tuo Mi Cloud è pieno al 90%.</string>
     <string name="micloud_warn_full_title">Spazio esaurito</string>
-    <string name="micloud_warn_full_sum">"Nessun nuovo contenuto sarà sincronizzazione con il Mi Cloud."</string>
+    <string name="micloud_warn_full_sum">"Nessun nuovo contenuto verrà sincronizzato con il Mi Cloud."</string>
     <string name="micloud_full_influence_dspt">"Tutte le tue foto, i video, le note e le app rimarranno nel backup sul cloud. 
 
 In questo modo, se smarrisci o danneggi il tuo dispositivo, i tuoi dati saranno ancora al sicuro.. 
@@ -138,7 +138,7 @@ Per rimediare a questo, puoi cancellare qualche vecchio file per fare spazio per
     <string name="normal">Normale</string>
     <string name="finish">Completato</string>
     <string name="remind_later">Ricordami più tardi</string>
-    <string name="enable_cloud_service_notification">"Non hai attivato MiCloud</string>
+    <string name="enable_cloud_service_notification">"Non hai attivato MiCloud"</string>
     <string name="contact">Contatti</string>
     <string name="sms">SMS</string>
     <string name="photo">Foto</string>
