--- a/Italian/main/Music.apk/res/values-it/strings.xml
+++ b/Italian/main/Music.apk/res/values-it/strings.xml
@@ -217,7 +217,7 @@
     <string name="please_download_first">Prima scarica il file.</string>
     <string name="set_ringtones_successful">%s impostato come suoneria.</string>
     <string name="set_ringtones_failed">Impossibile impostare suoneria.</string>
-    <string name="sleep_mode_canceled">Modalità sleep annullata</string>
+    <string name="sleep_mode_canceled">Modalità sospensione annullata</string>
     <string name="max_sleep_time">90</string>
     <string name="min_sleep_time">1</string>
 </resources>
